Closed Bug 1809216 (webgl-GLBlitHelperD3D-getD3D11-refcount) Opened 3 years ago Closed 3 years ago

`GLBlitHelperD3D::getD3D11()` does not increment ANGLE device refcount

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86_64
Windows
defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox108 --- wontfix
firefox109 --- wontfix
firefox110 --- fixed

People

(Reporter: ErichDonGubler, Assigned: ErichDonGubler, Mentored)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

While working on 1753349, :jrmuizel, :jgilbert, and I discovered that Firefox has incorrectly foregone increasing the reference count for the D3D device retrieved from ANGLE via QueryDeviceAttribEXT in GLBlitHelper::GetD3D11(). The COM pointer returned should have its strong refcount incremented via IUnknown::AddRef, but it currently does not.

Flags: needinfo?(erichdongubler)
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1322746

A more detailed set of reproduction steps can be found here. Feel free to NI me here if anybody needs support in validating this.

Flags: needinfo?(erichdongubler)
Pushed by egubler@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/01b132ada66e add missing refcount increment for `GLBlitHelperD3D::mD3D11` in `GLBlitHelperD3D::getD3D11` r=jgilbert,jrmuizel,gfx-reviewers

The fix for this has landed in autoland, but it's unclear whether we wish to take additional effort to backport this. NI'ing the folks who will likely be making the call there.

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Flags: needinfo?(jmuizelaar)
Flags: needinfo?(jgilbert)
Flags: needinfo?(bhood)
Resolution: --- → FIXED

Bugs get resolved when they're merged to m-c.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Let's see how things react in Nightly to this change, and if all is well in a few days, then I say patch ESR. It won't be seeing this ANGLE update for a long time.

Flags: needinfo?(bhood)
Status: REOPENED → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
Flags: needinfo?(jmuizelaar)
Flags: needinfo?(jgilbert)

Go ahead and nominate this for ESR approval whenever.

Flags: needinfo?(egubler)

:ryanvm: This patch isn't /quite/ a slam-dunk, since it hasn't been vetted really hard without the ANGLE rebase patches that also landed right after it. So, I'm not sure. Will consult with :jgilbert and :jrmuizel on this one.

Flags: needinfo?(egubler)

:ryanvm: Since this is already in Fx 110, we'd like to see if there's any fall-out before trying to get it into ESR. If Fx 110 goes for a few weeks without there being an apparent regression, we think it'd be worth considering again.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: